Add swagger linter (#4)
* Added swagger and base path

* Added go linter
