# api.yml
@@ -2,9 +2,11 @@ openapi: 3.0.0
 info:
   title: Edwin Perqara Interview Test (Storage Drink)
   version: 0.1.0
+servers:
+  - url: http://localhost
 
 paths:
-  /storage/drinks:
+  /api/v1/storage/drinks:
     get:
       summary: Get all drinks inside of storage
       responses:
@@ -30,7 +32,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
-  /storage/drink:
+  /api/v1/storage/drink:
     post:
       summary: Insert a new drink
       requestBody: 
@@ -52,7 +54,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
-  /storage/drink/{id}:
+  /api/v1/storage/drink/{id}:
     put:
       summary: Update an existing of drink
       parameters:
